--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url": "https://woonivers.com"
   },
   "bugs": {
-    "url": "https://github.com/Woonivers/react-native-document-scanner/issues"
+    "url": "https://github.com/SiSa68/react-native-document-scanner/issues"
   },
   "bundleDependencies": false,
   "deprecated": false,
@@ -88,7 +88,7 @@
     "/*.podspec",
     "react-native.config.js"
   ],
-  "homepage": "https://github.com/Woonivers/react-native-document-scanner#readme",
+  "homepage": "https://github.com/SiSa68/react-native-document-scanner#readme",
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
@@ -132,19 +132,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Woonivers/react-native-document-scanner.git"
+    "url": "git+https://github.com/SiSa68/react-native-document-scanner.git"
   },
   "scripts": {
-    "bootstrap": "yarn example && yarn",
-    "ci:publish": "semantic-release",
-    "ci:test": "jest --passWithNoTests",
-    "example": "yarn --cwd example",
-    "lint": "eslint --ext .js,.ts,.tsx .",
-    "prepare": "bob build",
-    "release": "release-it",
-    "semantic-release": "semantic-release",
-    "test": "jest",
-    "typescript": "tsc --noEmit"
+    "test": "jest"
   },
   "types": "lib/typescript/index.d.ts",
   "version": "2.1.1"
